add switch light-mode/dark-mode

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>CSS is Awesome</title>
 </head>
+
 <body>
-    
+    <header>
+        <div id="container-theme">
+            <button id="btn-theme" type="button" aria-pressed="false" aria-label="Activate dark mode"
+                title="Activate dark mode">
+                <span aria-hidden="true">🌞</span>
+                <span id="slider-theme" aria-hidden="true"></span>
+                🌙
+            </button>
+        </div>
+    </header>
+    <section id="section-home">
+        <h1>CSS IS AWESOME</h1>
+    </section>
+    <script src="main.js"></script>
 </body>
+
 </html>
