add navigation sidebar and scroll indicator

--- a/index.html
+++ b/index.html
@@ -14,15 +14,28 @@
         <div id="container-theme">
             <button id="btn-theme" type="button" aria-pressed="false" aria-label="Activate dark mode"
                 title="Activate dark mode">
-                <span aria-hidden="true">🌞</span>
+                <span id="icon-light-mode" aria-hidden="true">🌞</span>
                 <span id="slider-theme" aria-hidden="true"></span>
                 🌙
             </button>
         </div>
     </header>
+    <nav>
+        <ul>
+            <li><a href="#section-home">Section 1</a></li>
+            <li><a href="#section-2">Section 2</a></li>
+            <li><a href="#section-3">Section 3</a></li>
+        </ul>
+    </nav>
     <section id="section-home">
         <h1>CSS IS AWESOME</h1>
+        <div id="scroll-indicator">
+        <div>↓</div>
+        <div>Scroll</div>
+        </div>
     </section>
+    <section id="section-2"><h2>Section 2</h2></section>
+    <section id="section-3"><h2>Section 3</h2></section>
     <script src="main.js"></script>
 </body>
 
