add dots & animation on nav

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#section-home">Section 1</a></li>
-            <li><a href="#section-2">Section 2</a></li>
-            <li><a href="#section-3">Section 3</a></li>
+            <li><a href="#section-home"><span class="nav-dot"></span><span class="nav-label">Section 1</span></a></li>
+            <li><a href="#section-2"><span class="nav-dot"></span><span class="nav-label">Section 2</span></a></li>
+            <li><a href="#section-3"><span class="nav-dot"></span><span class="nav-label">Section 3</span></a></li>
         </ul>
     </nav>
     <main>
