add scroll button

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
         </header>
         <section id="section-home">
             <h1>CSS IS AWESOME</h1>
-            <div id="scroll-indicator">
-                <div>Scroll</div>
-                <div>👇</div>
-            </div>
+            <a id="scroll-button" href="#section-2">
+                Scroll <span aria-hidden="true" class="bouncing-hand">👇</span>
+            </a>
         </section>
         <section id="section-2">
             <h2>Section 2</h2>
