improve light theme style

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                 Scroll <span aria-hidden="true" class="bouncing-hand">👇</span>
             </a>
         </section>
-        <section class="section" id="section-relative-units">
+        <section class="section section-odd" id="section-relative-units">
             <h2 class="section-title">Relative units</h2>
             <p class="section-description">Relative units are one of the main powerful features of CSS :
                 thank to them, one can easily display responsive and accessible layout.
-                Let's review the most used and interesting relative units :
+                Let's review the most used and interesting relative units.
             </p>
             <h3 class="section-subtitle">EM</h3>
-            <p>An <code>em</code> is equal to the font-size of an element or
+            <p>An <code>em</code> is equal to the <strong>font-size of an element</strong> or
                 the font-size of that element’s nearest ancestor.
             </p>
             <p>For example, we know that <code>1em</code> refers to the font size.
@@ -99,7 +99,7 @@
             <h3 class="section-subtitle">CH</h3>
             <h3 class="section-subtitle">Relative units and media queries</h3>
         </section>
-        <section id="section-3">
+        <section id="section-3" class="section-even">
             <h2>Section 3</h2>
         </section>
     </main>
