improve dark theme style

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p>For example, we know that <code>1em</code> refers to the font size.
                 So if the parent's font-size value of an element is <code>16px</code>,
                 <code>1em</code> equals <code>16px</code> for that element. So far, so good.
-                But <span aria-hidden="true" class="warning">(!)</span> if the element itself declare a
+                But <span aria-hidden="true" class="warning">💡</span> if the element itself declare a
                 font-size, like <code>12px</code>, then <code>1em</code> equals <code>12px</code>.</p>
             <button type="button" onclick="displayExample(this, 'example-rem')">Show me an example</button>
             <div class="example d-none" id="example-rem">
