--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <code>1em</code> equals <code>16px</code> for that element. So far, so good.
                 But <span aria-hidden="true" class="warning">💡</span> if the element itself declare a
                 font-size, like <code>12px</code>, then <code>1em</code> equals <code>12px</code>.</p>
-            <button type="button" onclick="displayExample(this, 'example-rem')">Show me an example</button>
-            <div class="example d-none" id="example-rem">
+            <button type="button" onclick="displayExample(this, 'example-em')">Show me an example</button>
+            <div class="example d-none" id="example-em">
                 <div class="example-illustration">
                     <div class="example-em-parent">
                         <div class="example-em-child-one"></div>
@@ -94,10 +94,50 @@
                 a button or input fields.</p>
 
             <h3 class="section-subtitle">REM</h3>
+            <p>REM stands for <em>root em</em>.</p>
+            <p>By "root", it means that <code>1rem</code> equals the <strong>font size of the html element</strong>
+                (which for most browsers has a default value of <code>16px</code>).</p>
+            <button type="button" onclick="displayExample(this, 'example-rem')">Show me an
+                example</button>
+            <div class="example d-none" id="example-rem">
+                <div class="example-illustration">
+                    <div class="example-rem-parent">
+                        <div class="example-rem-child-one"></div>
+                        <div class="example-rem-child-two"></div>
+                    </div>
+                </div>
+                <pre>
+<span class="comment">/* big purple box */</span>
+<span class="selector">.parent</span> {
+    <span class="property">width</span>: <span class="number">12.5</span><span class="unit">rem</span>;
+    <span class="property">height</span>: <span class="number">12.5</span><span class="unit">rem</span>;
+}
+
+<span class="comment">/* medium pink box */</span>
+<span class="selector">.child-one</span> {
+    <span class="property">width</span>: <span class="number">2.5</span><span class="unit">rem</span>;
+    <span class="property">height</span>: <span class="number">2.5</span><span class="unit">rem</span>;
+    <span class="property">margin-right</span>: <span class="number">0.5</span><span class="unit">rem</span>;
+}
+
+<span class="comment">/* small green box */</span>
+<span class="selector">.child-two</span> {
+    <span class="property">width</span>: <span class="number">1.125</span><span class="unit">rem</span>;
+    <span class="property">height</span>: <span class="number">1.125</span><span class="unit">rem</span>;
+}
+                </pre>
+            </div>
+            <h4 class="section-subtitle-summary">When should we use rem ?</h4>
+            <p>Unlike the <code>em</code> unit, the <code>rem</code> unit is a global and constant unit.
+                It means that its value will not change, no matter how deeply the element is nested.</p>
+            <p>For that reason, it best to use <code>rem</code> for properties that will allow elements to keep the same
+                proportion
+                on every viewports : font-size, spacing, box size, etc.</p>
             <h3 class="section-subtitle">VH && VW</h3>
             <h3 class="section-subtitle">VMAX && VMIN</h3>
             <h3 class="section-subtitle">CH</h3>
             <h3 class="section-subtitle">Relative units and media queries</h3>
+            <h3 class="section-subtitle">Resources</h3>
         </section>
         <section id="section-3" class="section-even">
             <h2>Section 3</h2>
