add other sections

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
             <li><a href="#section-home"><span class="nav-dot"></span><span class="nav-label">Home</span></a></li>
             <li><a href="#section-relative-units"><span class="nav-dot"></span><span class="nav-label">Relative
                         units</span></a></li>
-            <li><a href="#section-3"><span class="nav-dot"></span><span class="nav-label">Section 3</span></a></li>
+            <li><a href="#section-variables"><span class="nav-dot"></span><span class="nav-label">Variables</span></a>
+            </li>
+            <li><a href="#section-navigation"><span class="nav-dot"></span><span class="nav-label">Navigation</span></a>
+            </li>
+            <li><a href="#section-layout"><span class="nav-dot"></span><span class="nav-label">Layout</span></a></li>
         </ul>
     </nav>
     <main>
@@ -299,8 +303,14 @@
             </ul>
 
         </section>
-        <section id="section-3" class="section-even">
-            <h2>Section 3</h2>
+        <section id="section-variables" class="section section-even">
+            <h2 class="section-title">Variables</h2>
+        </section>
+        <section id="section-navigation" class="section section-odd">
+            <h2 class="section-title">Navigation</h2>
+        </section>
+        <section id="section-layout" class="section section-even">
+            <h2 class="section-title">Layout</h2>
         </section>
     </main>
 
