add content about Grid Layout

--- a/index.html
+++ b/index.html
@@ -311,6 +311,25 @@
         </section>
         <section id="section-layout" class="section section-even">
             <h2 class="section-title">Layout</h2>
+            <p class="section-description">
+                Modern CSS give us tools to easily display responsive and customized layout,
+                without the help of CSS libraries.
+                Flexbox and Grid are the most powerful ones.
+            </p>
+
+            <!-- SUBSECTION EM -->
+            <h3 class="section-subtitle">GRID</h3>
+            <p>CSS Grid Layout is a tool released in 2017.
+                It's a <strong>two-dimensional grid-based layout system</strong> and was created to solve a common
+                problem :
+                how to control every region of a page, without the need of "hacking" solutions.
+            </p>
+            <p>I won't dive in every feature of the CSS Grid Layout, but I will show you some examples,
+                along with comments.
+            </p>
+            <p>If you want to learn the basics of CSS Grid Layout, I highly recommend this tutorial : 
+                <a href="https://learncssgrid.com">Learn CSS Grid - A Guide to Learning CSS Grid</a>
+            </p>
         </section>
     </main>
 
