--- a/index.html
+++ b/index.html
@@ -278,6 +278,13 @@
   <span class="property">font-size</span>: <span class="number">1.125</span><span class="unit">em</span>;
 }
 
+<span class="selector">.big-button</span> {
+  <span class="comment">/* ↓ clamp(min-value, preferred value, max-value) */</span>
+  <span class="property">font-size</span>: <span class="property">clamp</span>(<span class="number">1.5</span><span
+    class="unit">rem</span>, <span class="number">3</span><span class="unit">vw</span>, <span
+        class="number">2.5</span><span class="unit">rem</span>);
+}
+
 <span class="tag">article</span>, <span class="tag">p</span> {
   <span class="comment">/* ↓ better readability */</span>
   <span class="property">max-width</span>: <span class="number">60</span><span class="unit">ch</span>;
@@ -290,6 +297,7 @@
             <ul>
                 <li><a href="https://dev.to/5t3ph/guide-to-css-units-for-relational-spacing-1mj5">Guide to CSS Units for
                         Relative Spacing</a></li>
+                <li><a href="https://codepen.io/5t3ph/pen/KKmdZOK">It's time to upgrade from pixels</a></li>
                 <li><a href="https://every-layout.dev/rudiments/units/">Units</a></li>
                 <li><a href="https://dev.to/bytegasm/15-css-relative-units-how-many-do-you-know-em-rem-ex-cap-ch-ic-6m">
                         15 CSS Relative units, how many do you know? em, rem, ex, cap, ch, ic... </a></li>
@@ -327,9 +335,41 @@
             <p>I won't dive in every feature of the CSS Grid Layout, but I will show you some examples,
                 along with comments.
             </p>
-            <p>If you want to learn the basics of CSS Grid Layout, I highly recommend this tutorial : 
+            <p>If you want to learn the basics of CSS Grid Layout, I highly recommend this tutorial :
                 <a href="https://learncssgrid.com">Learn CSS Grid - A Guide to Learning CSS Grid</a>
             </p>
+            <h4 class="section-subtitle-example">CSS Grid Basics</h4>
+            <div id="grid-container-one">
+                <div class="grid-items-one">
+                    <span class="grid-item-number">1</span>
+                    justify-self: start;<br/>
+                    align-self: start;
+                </div>
+                <div class="grid-items-one">
+                    <span class="grid-item-number">2</span>
+                    justify-self: center;<br/>
+                    align-self: center;
+                </div>
+                <div class="grid-items-one">
+                    <span class="grid-item-number">3</span>
+                    justify-self: end;<br/>
+                    align-self: end;
+                </div>
+                <div class="grid-items-one">
+                    <span class="grid-item-number">4</span>
+                    justify-self: stretch;</br>
+                    grid-column-start: 2;
+                </div>
+                <div class="grid-items-one">
+                    <span class="grid-item-number">5</span>
+                    new item, without properties
+                </div>
+                <div class="grid-items-one">
+                    <span class="grid-item-number">6</span>
+                    The items of this row can't be wider than the half of the container height.
+                    The items of this row can't be wider than the half of the container height.
+                </div>
+            </div>
         </section>
     </main>
 
