--- a/index.html
+++ b/index.html
@@ -342,17 +342,17 @@
             <div id="grid-container-one">
                 <div class="grid-items-one">
                     <span class="grid-item-number">1</span>
-                    justify-self: start;<br/>
+                    justify-self: start;<br />
                     align-self: start;
                 </div>
                 <div class="grid-items-one">
                     <span class="grid-item-number">2</span>
-                    justify-self: center;<br/>
+                    justify-self: center;<br />
                     align-self: center;
                 </div>
                 <div class="grid-items-one">
                     <span class="grid-item-number">3</span>
-                    justify-self: end;<br/>
+                    justify-self: end;<br />
                     align-self: end;
                 </div>
                 <div class="grid-items-one">
@@ -370,6 +370,41 @@
                     The items of this row can't be wider than the half of the container height.
                 </div>
             </div>
+            <pre>
+<span class="comment">/* white container */</span>
+<span class="selector">#grid-container</span> {
+    <span class="property">display</span>: <span class="value">grid</span>;
+    <span class="property">grid-template-columns</span>: <span class="property">repeat</span>(<span class="number">3</span>, <span class="number">1</span><span class="unit">fr</span>);
+    <span class="comment">/* ↑ 1fr(action) 1fr 1fr => 3 columns of 33% */</span>
+    <span class="property">grid-template-rows</span>: <span class="number">8</span><span class="unit">rem</span> <span
+            class="value">auto</span> <span class="property">minmax</span>(<span class="value">auto</span>, <span
+                class="number">50</span><span
+                    class="unit">%</span>);
+    <span class="comment">/* ↑ 3 different rows */</span>
+    <span class="property">gap</span>: <span class="number">0.5</span><span class="unit">rem</span>;
+    <span class="comment">/* ↑ gutters */</span>
+}
+
+<span class="selector">.grid-items-one</span>:<span class="selector">nth-child</span>(<span class="number">1</span>) {
+    <span class="property">justify-self</span>: <span class="value">start</span>;
+    <span class="property">align-self</span>: <span class="value">start</span>;
+}
+
+<span class="selector">.grid-items-one</span>:<span class="selector">nth-child</span>(<span class="number">2</span>) {
+    <span class="property">justify-self</span>: <span class="value">center</span>;
+    <span class="property">align-self</span>: <span class="value">center</span>;
+}
+
+<span class="selector">.grid-items-one</span>:<span class="selector">nth-child</span>(<span class="number">3</span>) {
+    <span class="property">justify-self</span>: <span class="value">end</span>;
+    <span class="property">align-self</span>: <span class="value">end</span>;
+}
+
+<span class="selector">.grid-items-one</span>:<span class="selector">nth-child</span>(<span class="number">4</span>) {
+    <span class="property">justify-self</span>: <span class="value">stretch</span>;
+    <span class="property">grid-column-start</span> <span class="number">2</span>;
+}
+            </pre>
         </section>
     </main>
 
