--- a/index.html
+++ b/index.html
@@ -338,36 +338,133 @@
             <p>If you want to learn the basics of CSS Grid Layout, I highly recommend this tutorial :
                 <a href="https://learncssgrid.com">Learn CSS Grid - A Guide to Learning CSS Grid</a>
             </p>
+            <!-- First example Grid -->
             <h4 class="section-subtitle-example">CSS Grid Basics</h4>
             <div id="grid-container-one">
-                <div class="grid-items-one">
+                <div class="grid-items">
                     <span class="grid-item-number">1</span>
                     justify-self: start;<br />
                     align-self: start;
                 </div>
-                <div class="grid-items-one">
+                <div class="grid-items">
                     <span class="grid-item-number">2</span>
                     justify-self: center;<br />
                     align-self: center;
                 </div>
-                <div class="grid-items-one">
+                <div class="grid-items">
                     <span class="grid-item-number">3</span>
                     justify-self: end;<br />
                     align-self: end;
                 </div>
-                <div class="grid-items-one">
+                <div class="grid-items">
                     <span class="grid-item-number">4</span>
                     justify-self: stretch;</br>
                     grid-column-start: 2;
                 </div>
-                <div class="grid-items-one">
+                <div class="grid-items">
                     <span class="grid-item-number">5</span>
                     new item, without properties
                 </div>
-                <div class="grid-items-one">
+                <div class="grid-items">
                     <span class="grid-item-number">6</span>
                     The items of this row can't be wider than the half of the container height.
                     The items of this row can't be wider than the half of the container height.
+                </div>
+            </div>
+            <pre>
+<span class="comment">/* white container */</span>
+<span class="selector">#grid-container</span> {
+    <span class="property">display</span>: <span class="value">grid</span>;
+    <span class="property">grid-template-columns</span>: <span class="property">repeat</span>(<span class="number">3</span>, <span class="number">1</span><span class="unit">fr</span>);
+    <span class="comment">/* ↑ 1fr(action) 1fr 1fr => 3 columns of 33% */</span>
+    <span class="property">grid-template-rows</span>: <span class="number">8</span><span class="unit">rem</span> <span
+            class="value">auto</span> <span class="property">minmax</span>(<span class="value">auto</span>, <span
+                class="number">50</span><span
+                    class="unit">%</span>);
+    <span class="comment">/* ↑ 3 different rows */</span>
+    <span class="property">gap</span>: <span class="number">0.5</span><span class="unit">rem</span>;
+    <span class="comment">/* ↑ gutters */</span>
+}
+
+<span class="selector">.grid-items-one</span>:<span class="selector">nth-child</span>(<span class="number">1</span>) {
+    <span class="property">justify-self</span>: <span class="value">start</span>;
+    <span class="property">align-self</span>: <span class="value">start</span>;
+}
+
+<span class="selector">.grid-items-one</span>:<span class="selector">nth-child</span>(<span class="number">2</span>) {
+    <span class="property">justify-self</span>: <span class="value">center</span>;
+    <span class="property">align-self</span>: <span class="value">center</span>;
+}
+
+<span class="selector">.grid-items-one</span>:<span class="selector">nth-child</span>(<span class="number">3</span>) {
+    <span class="property">justify-self</span>: <span class="value">end</span>;
+    <span class="property">align-self</span>: <span class="value">end</span>;
+}
+
+<span class="selector">.grid-items-one</span>:<span class="selector">nth-child</span>(<span class="number">4</span>) {
+    <span class="property">justify-self</span>: <span class="value">stretch</span>;
+    <span class="property">grid-column-start</span> <span class="number">2</span>;
+}
+            </pre>
+            <!-- Second example Grid -->
+            <h4 class="section-subtitle-example">CSS Grid Responsive</h4>
+            <div id="grid-container-two">
+                <div class="grid-container-two">
+                    <div class="grid-items">
+                        <span class="grid-item-number">1</span>
+                        I'm an only child. Give me all the space I need, I deserve it
+                    </div>
+                </div>
+                <div class="grid-container-two">
+                    <div class="grid-items grid-items-odd">
+                        <span class="grid-item-number">2</span>
+                        We are two children. Give us equal space. 
+                        When it's too narrow, give us all the space, separately 
+                    </div>
+                    <div class="grid-items grid-items-odd">
+                        <span class="grid-item-number">2</span>
+                        We are two children. Give us equal space.
+                        When it's too narrow, give us all the space, separately
+                    </div>
+                </div>
+                <div class="grid-container-two">
+                    <div class="grid-items">
+                        <span class="grid-item-number">3</span>
+                        We are three children. Give us equal space, but don't forget that we need a minimum space.
+                        When it's too narrow, give us all the space, separately
+                    </div>
+                    <div class="grid-items">
+                        <span class="grid-item-number">3</span>
+                        We are three children. Give us equal space, but don't forget that we need a minimum space.
+                        When it's too narrow, give us all the space, separately
+                    </div>
+                    <div class="grid-items">
+                        <span class="grid-item-number">3</span>
+                        I'm the third child. In some occasions, I'm left alone, and, on top of that, 
+                        I can't take advantage of all the available space 😥
+                    </div>
+                </div>
+                <div class="grid-container-two">
+                    <div class="grid-items grid-items-odd">
+                        <span class="grid-item-number">4</span>
+                        We are four children. Give us equal space, but don't forget that we need a minimum space.
+                        When it's too narrow, give us all the space, separately
+                    </div>
+                    <div class="grid-items grid-items-odd">
+                        <span class="grid-item-number">4</span>
+                        We are four children. Give us equal space, but don't forget that we need a minimum space.
+                        When it's too narrow, give us all the space, separately
+                    </div>
+                    <div class="grid-items grid-items-odd">
+                        <span class="grid-item-number">4</span>
+                        We are four children. Give us equal space, but don't forget that we need a minimum space.
+                        When it's too narrow, give us all the space, separately
+                    </div>
+                    <div class="grid-items grid-items-odd">
+                        <span class="grid-item-number">4</span>
+                        I'm the fourth child. In some occasions, I'm left alone, and, on top of that,
+                        I can't take advantage of all the available space 😥
+                    </div>
                 </div>
             </div>
             <pre>
